--- a/src/Components/MenuBurger/MenuBurger.scss
+++ b/src/Components/MenuBurger/MenuBurger.scss
@@ -52,6 +52,10 @@
       transition: transform 0.3s ease-in-out;
       transform: translateX(-100%);
       padding: 2rem;
+
+      &.open {
+        transform: translateX(0);
+      }
   
       li {
         padding: 1rem 0;
