--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -12,10 +12,16 @@ body {
 .menu {
     display: flex;
     flex-direction: column;
+    list-style-type: none;
 
     .menu-item {
         padding: 10px;
         border-bottom: 1px solid #ddd;
+
+        a {
+            color: inherit; 
+            text-decoration: none; 
+        }
     }
 }
 
