--- a/src/Components/Recettes/Components/CartesPots/CartesPots.scss
+++ b/src/Components/Recettes/Components/CartesPots/CartesPots.scss
@@ -3,6 +3,11 @@
     padding: 20px;
     border-radius: 15px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   
     .card {
       width: 12rem;
