--- a/src/Components/Recettes/Components/CartesPots/CartesPots.scss
+++ b/src/Components/Recettes/Components/CartesPots/CartesPots.scss
@@ -1,8 +1,8 @@
 .card-container {
     margin: 20px;
     padding: 20px;
-    border-radius: 15px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.08);
 
     display: flex;
     flex-direction: column;
@@ -11,17 +11,16 @@
   
     .card {
       width: 12rem;
+
   
       .card-body {
+        background-color: #F8EDEB;
+        opacity: 0.9;
         .card-title {
           font-size: 24px;
           color: #333;
         }
-  
-        .card-text {
-          font-size: 16px;
-          color: #666;
-        }
+
   
         .btn-primary {
           background-color: #f1c40f;
