--- a/src/Components/Buttons/Button.scss
+++ b/src/Components/Buttons/Button.scss
@@ -1,21 +1,10 @@
-.btn {
-    &.btn-primary {
-      &.btn-lg {
-        background-color: #44ff00;
-        border-color: #007bff;
-        color: #fff;
-        padding: .5rem 1rem;
-        font-size: 1.25rem;
-        line-height: 1.5;
-        border-radius: .3rem;
-        cursor: pointer;
-        margin-top: 10px;
-  
-        &:hover {
-          background-color: #0056b3;
-          border-color: #0056b3;
-        }
-      }
-    }
-  }
+$color-ocean: #416dea;
+$borderRadius: 36px;
+$font-face: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+
+.large-button {
+  color: $color-ocean;
+  border-radius: $borderRadius;
+  font-family: $font-face;
+}
   
