login form on going v1

--- a/src/Components/Buttons/Button.scss
+++ b/src/Components/Buttons/Button.scss
@@ -2,8 +2,8 @@
   display: inline-block;
   width: 10em;
   height: 3em;
-  background-color: #FFB5A7; /* Changez cela en fonction de votre palette de couleurs */
-  color: #343a40;/* Changez cela en fonction de votre palette de couleurs */
+  background-color: #FFB5A7; 
+  color: #343a40;
   font-weight:700;
   border: none;
   border-radius: 4px;
@@ -15,9 +15,6 @@
   cursor: pointer;
 }
 
-.large-button:hover {
-  background-color: #4CAF50; /* Changer cela en fonction de votre palette de couleurs */
-  color: white;
-}
+
 
   
