--- a/src/Components/Auth/Login/Login.scss
+++ b/src/Components/Auth/Login/Login.scss
@@ -86,7 +86,9 @@
 
       }
       
-      button {
+    }
+
+    button {
         padding: 0.75rem;
         border: none;
         border-radius: 0.5rem;
@@ -99,7 +101,6 @@
           background-color: #0056b3;
         }
       }
-    }
   
     p {
       text-align: center;
@@ -116,4 +117,27 @@
       }
     }
   }
+
+  .btn-facebook {
+    background-color: #3b5998;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 14px;
+    cursor: pointer;
+    border-radius: 4px;
+    font-family: Arial, sans-serif;
+    
+    .facebook-icon {
+      height: 20px;
+      margin-right: 10px;
+    }
+  }
+  
+  
   
