--- a/src/Components/Auth/Login/Login.scss
+++ b/src/Components/Auth/Login/Login.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #F8EDEB;
+    background-color: #FEFAE0;
     height: 100%;
   
     form {
@@ -12,9 +12,8 @@
       gap: 1rem;
       padding: 2rem;
       border-radius: 0.5rem;
-      background-color: white;
+      background-color: #FEFAE0;
       width: 90%;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   
       h2 {
         text-align: center;
@@ -33,7 +32,8 @@
           padding: 0.5rem;
           width: 100%;
           border-radius: 0.2rem;
-          border: 1px solid #ddd;
+          background-color: white;
+          border: 1px solid #C4DFDF;
           font-size: 1rem;
         }
       }
@@ -92,7 +92,7 @@
         padding: 0.75rem;
         border: none;
         border-radius: 0.5rem;
-        background-color: #007bff;
+        background-color: #F79D65;
         color: white;
         cursor: pointer;
         transition: all 0.2s ease;
@@ -116,28 +116,66 @@
         }
       }
     }
+
+    .hr-style {
+        border: none;
+        height: 2px;
+        background-color: #000; // Utilisez la couleur de votre choix
+        margin: 2px 0; // Utilisez la marge de votre choix
+      }
+
+    .btn-google {
+        background-color: #f5f5f5;
+        color: #737373;
+        border: none;
+        padding: 10px 20px;
+        text-align: center;
+        text-decoration: none;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 14px;
+        cursor: pointer;
+        border-radius: 4px;
+        font-family: Arial, sans-serif;
+        border: 1px solid #d6d6d6;
+        width: 20em;
+      
+        &:hover {
+          background-color: #e8e8e8;
+        }
+      
+        .google-icon {
+          height: 20px;
+          margin-right: 10px;
+        }
+      }
+      
+      .btn-facebook {
+        background-color: #3b5998;
+        color: white;
+        border: none;
+        padding: 10px 20px;
+        text-align: center;
+        text-decoration: none;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 14px;
+        cursor: pointer;
+        border-radius: 4px;
+        font-family: Arial, sans-serif;
+        margin-top: 1em;
+        width: 20em;
+        
+        .facebook-icon {
+          height: 20px;
+          margin-right: 10px;
+        }
+      }
+      
   }
 
-  .btn-facebook {
-    background-color: #3b5998;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 14px;
-    cursor: pointer;
-    border-radius: 4px;
-    font-family: Arial, sans-serif;
-    
-    .facebook-icon {
-      height: 20px;
-      margin-right: 10px;
-    }
-  }
   
   
   
