--- a/src/Components/Recettes/Components/CartesPots/CartesPots.scss
+++ b/src/Components/Recettes/Components/CartesPots/CartesPots.scss
@@ -1,12 +1,15 @@
 .card-container {
     margin: 20px;
     padding: 20px;
-    
-
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    h2 {
+      color: #CCD5AE;
+      font-weight: bold;
+    }
   
     .card {
       width: 13rem;
@@ -20,12 +23,14 @@
           color: #333;
         }
 
+
   
         .btn-primary {
-          background-color: #f1c40f;
-          border-color: #f1c40f;
+          background-color:#F79D65 ;
+          border-color: #F79D65;
         }
       }
     }
   }
+
   
