--- a/src/Components/Auth/Signup/Signup.scss
+++ b/src/Components/Auth/Signup/Signup.scss
@@ -173,5 +173,18 @@
           margin-right: 10px;
         }
       }
+    /* Styles pour tablette */
+    @media (min-width: 768px) {
+        form {
+            width: 50%;
+        }
+    }
+
+    /* Styles pour ordinateur de bureau */
+    @media (min-width: 1024px) {
+        form {
+            width: 30%;
+        }
+    }
       
   }
