--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -23,6 +23,20 @@ body {
             text-decoration: none; 
         }
     }
+/* Styles pour tablette 
+@media (min-width: 768px) {
+    form {
+        width: 50%;
+    }
+} */
+
+/* Styles pour ordinateur de bureau 
+@media (min-width: 1024px) {
+    form {
+        width: 30%;
+    }
+}*/
+
 }
 
 // Media query pour les tablettes et les ordinateurs
