--- a/src/Components/Profile/Profil.scss
+++ b/src/Components/Profile/Profil.scss
@@ -77,4 +77,17 @@
         }       
         
     }
+/* Styles pour tablette 
+@media (min-width: 768px) {
+    form {
+        width: 50%;
+    }
+} */
+
+/* Styles pour ordinateur de bureau 
+@media (min-width: 1024px) {
+    form {
+        width: 30%;
+    }
+}*/
 }
