--- a/src/Components/Recettes/Components/CartesPots/CartesPots.scss
+++ b/src/Components/Recettes/Components/CartesPots/CartesPots.scss
@@ -31,6 +31,19 @@
         }
       }
     }
-  }
+/* Styles pour tablette 
+@media (min-width: 768px) {
+    form {
+        width: 50%;
+    }
+} */
+
+/* Styles pour ordinateur de bureau 
+@media (min-width: 1024px) {
+    form {
+        width: 30%;
+    }
+}*/
+}
 
   
