--- a/src/Components/Recettes/EcrireUneRecette/EcrireUneRecette.scss
+++ b/src/Components/Recettes/EcrireUneRecette/EcrireUneRecette.scss
@@ -5,10 +5,8 @@
     margin: 20px auto;
     max-width: 400px;
     padding: 20px;
-    background-color: #f5f5f5;
-    border: 1px solid red;
+    background-color: #ffff;
     border-radius: 5px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
   }
   
   /* Styles pour les titres */
