--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
 html, body {
   height: 100%;
-  margin: 0;
-  padding: 0;
   font-family: 'Roboto', sans-serif;
 }
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
