--- a/src/Components/Recettes/EcrireUneRecette/EcrireUneRecette.scss
+++ b/src/Components/Recettes/EcrireUneRecette/EcrireUneRecette.scss
@@ -29,7 +29,7 @@
   .form-input {
     width: 100%;
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid #E9EDC9;
     border-radius: 4px;
     margin-top: 8px;
     margin-bottom: 16px;
@@ -56,7 +56,7 @@
     appearance: none;
     width: 20px;
     height: 20px;
-    border: 2px solid #333;
+    border: 2px solid #E9EDC9;
     border-radius: 50%;
     margin-right: 5px;
     cursor: pointer;
@@ -66,4 +66,26 @@
   .form-radio input[type="radio"]:checked {
     background-color: yellow;
   }
+
+  
+
+    .button-validate {
+        width: 140px;
+        height: 30px;
+        margin-bottom: 0px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 20px;
+        background-color: #F79D65;
+        border-style: none;
+        border-radius: 1px;
+        box-shadow: none;
+        text-decoration: none;
+        border-radius: 50px;
+    }
+       
+    
+    
+
   
