form on going v6

--- a/src/Components/Recettes/EcrireUneRecette/EcrireUneRecette.scss
+++ b/src/Components/Recettes/EcrireUneRecette/EcrireUneRecette.scss
@@ -8,6 +8,14 @@
     background-color: #ffff;
     border-radius: 5px;
   }
+
+  .ingredient-container {
+      display: flex;
+      align-items: center;  /* Centre les éléments verticalement */
+      justify-content: center; /* Répartit l'espace entre l'input et l'icône */
+  }
+    
+  
   
   /* Styles pour les titres */
   .form-title {
@@ -23,7 +31,10 @@
     font-weight: bold;
     margin-bottom: 10px;
     color: #333;
+    flex: 1;  /* Permet au label (et à son input enfant) de grandir et de prendre autant d'espace que possible */
+    margin-right: 10px; /* Ajoutez un peu d'espace entre l'input et l'icône poubelle */
   }
+
   
   /* Styles pour les champs de texte (inputs) */
   .form-input {
