--- a/src/Components/Recettes/EcrireUneRecette/EcrireUneRecette.scss
+++ b/src/Components/Recettes/EcrireUneRecette/EcrireUneRecette.scss
@@ -14,6 +14,12 @@
       align-items: center;  /* Centre les éléments verticalement */
       justify-content: center; /* Répartit l'espace entre l'input et l'icône */
   }
+
+  .task-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
     
   
   
