--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+// Base styles for your app
 html, body {
   height: 100%;
   font-family: 'Roboto', sans-serif;
@@ -6,5 +7,5 @@ html, body {
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box; 
 }
-
