--- a/src/Components/Profile/Profil.scss
+++ b/src/Components/Profile/Profil.scss
@@ -1,7 +1,6 @@
 .container {
     background-color: #E9EDC9;
-    margin-top: 40px;
-    min-height: 100%;
+    height: 100%;
 
     ul {
         width: 90%;
