--- a/src/Components/MenuBurger/MenuBurger.scss
+++ b/src/Components/MenuBurger/MenuBurger.scss
@@ -1,7 +1,7 @@
 .burger-menu {
     display: flex;
     justify-content: flex-end;
-    position: fixed; /* ou 'absolute', 'fixed', ou 'sticky' */
+    position: absolute; /* ou 'absolute', 'fixed', ou 'sticky' */
     z-index: 1000; 
     top: 0;
     right: 0;
@@ -34,6 +34,7 @@
       .bar:nth-child(1) {
         transform: rotate(45deg);
         top: 0;
+        position: fixed;
       }
   
       .bar:nth-child(2) {
@@ -43,6 +44,7 @@
       .bar:nth-child(3) {
         transform: rotate(-45deg);
         top: 0;
+        position: fixed;
       }
     }
   
