--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-// Base styles for your app
+
 html, body {
   height: 100%;
   font-family: 'Roboto', sans-serif;
@@ -8,4 +8,16 @@ html, body {
   margin: 0;
   padding: 0;
   box-sizing: border-box; 
+}
+
+h1 {
+  font-size: 22px;
+}
+
+h2 {
+  font-size: 20px;
+}
+
+h2 {
+  font-size: 18px;
 }
