profil mobile device done

--- a/src/Components/MenuBurger/MenuBurger.scss
+++ b/src/Components/MenuBurger/MenuBurger.scss
@@ -22,7 +22,7 @@
         .bar {
             width: 2rem;
             height: 0.15rem;
-            background-color: black;
+            background-color: #228B22;
             transition: all 0.3s linear;
             position: relative;
             transform-origin: 1px;
