--- a/src/Components/Buttons/ButtonEcrireRecette/ButtonRecette.scss
+++ b/src/Components/Buttons/ButtonEcrireRecette/ButtonRecette.scss
@@ -22,6 +22,7 @@
             color: whitesmoke;
             margin-bottom: 0;
             font-weight: bold;
+            text-transform: uppercase;
         }
     
     
