--- a/src/Components/Accessoires/Accessoires.scss
+++ b/src/Components/Accessoires/Accessoires.scss
@@ -1,31 +1,27 @@
 .card {
-    border: 1px solid #ccc;
-    border-radius: 0x;
-    transition: 0.3s;
-    
-    &:hover {
-      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-    }
-  
-    .card-img {
-      border-radius: 0px;
-      width: 100%;
-      height: 200px;
-      object-fit: cover;
-    }
-  
-    .card-img-overlay {
-      background: rgba(0, 0, 0, 0.5);
-      color: white;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-  
-      .card-title {
-        font-size: 20px;
-        font-weight: bold;
-        text-align: center;
-      }
+  border: 1px solid #ccc;
+  border-radius: 0px;
+  transition: 0.3s;
+
+  .card-img {
+    border-radius: 0px;
+    filter: brightness(100%); // Ajustez le pourcentage pour augmenter la luminosité
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+  }
+
+  .card-img-overlay {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    .card-title {
+      font-size: 20px;
+      font-weight: bold;
+      text-align: center;
+      color: #66CC33;
     }
   }
+}
