footer on going

--- a/src/Components/Accessoires/Accessoires.scss
+++ b/src/Components/Accessoires/Accessoires.scss
@@ -1,7 +1,6 @@
 .card {
-  border: 1px solid #ccc;
-  border-radius: 0px;
-  transition: 0.3s;
+  box-shadow: none;
+  margin-top: 0;
 
   .card-img {
     border-radius: 0px;
