--- a/src/Components/FruitsLegumesSaison/FruitsLegumesSaison.scss
+++ b/src/Components/FruitsLegumesSaison/FruitsLegumesSaison.scss
@@ -1,7 +1,5 @@
 .card {
-  border: 1px solid #ccc;
-  border-radius: 0px;
-  transition: 0.3s;
+  box-shadow: none;
 
   .card-img {
     border-radius: 0px;
